--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -60,26 +60,26 @@
     </section>
     <section id="filter">
         <div class="container">
-            <form action="">
+            <form action="{%  url 'home' %}" method="get">
                 <div class="filter_wrp">
                     <div class="wrap">
                         <div class="left_block">
                             <div class="fas fa-caret-down">
-                                <select class="form-control" name="brand" id="filter_brand">
+                                <select class="form-control" name="mark__id" id="filter_brand">
                                     <option value="0">Марка</option>
                                     {% for mark in marks %}
-                                    <option value="{{ mark.id }}">{{ mark.name }}</option>
+                                    <option class="model_load" value="{{ mark.id }}">{{ mark.name }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
                             <div class="fas fa-caret-down">
-                                <select class="form-control" name="model" id="filter_model">
+                                <select class="form-control" name="model__id" id="filter_model">
                                     <option value="m1">модель</option>
                                     <option value="m2">модель</option>
                                 </select>
                             </div>
                             <div class="fas fa-caret-down">
-                                <select class="form-control" name="gearbox" id="filter_gearbox">
+                                <select class="form-control" name="gearbox__id" id="filter_gearbox">
                                     <option value="0">КПП</option>
                                     {% for gearbox in gearboxs %}
                                     <option value="{{ gearbox.id }}">{{ gearbox.name }}</option>
@@ -91,17 +91,17 @@
                                 <legend>Регистрация</legend>
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optradio">Любая регистрация
+                                        <input type="radio" class="form-check-input" checked="checked">Любая регистрация
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optradio">Растаможенные
+                                        <input type="radio" class="form-check-input" name="cleared" value="1">Растаможенные
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optradio">Не растаможенные
+                                        <input type="radio" class="form-check-input" name="cleared" value="">Не растаможенные
                                     </label>
                                 </div>
                             </fieldset>
@@ -126,10 +126,10 @@
                                 <label for="year">Год</label>
                                 <div class="year_pick">
                                     <div class="fas fa-caret-down">
-                                        <select class="yearselect" name="year" id=""></select>
+                                        <select class="yearselect" name="start_year" id=""></select>
                                     </div>
                                     <div class="fas fa-caret-down">
-                                        <select class="yrselectdesc" name="year" id=""></select>
+                                        <select class="yrselectdesc" name="finish_year" id=""></select>
                                     </div>
                                     </div>
                             </div>
@@ -180,17 +180,17 @@
                                 <legend>ДТП</legend>
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optradio2">Все
+                                        <input type="radio" class="form-check-input" checked="checked">Все
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optradio2">Без ДТП
+                                        <input type="radio" class="form-check-input" name="dtp" value="">Без ДТП
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optradio2">После ДТП
+                                        <input type="radio" class="form-check-input" name="dtp" value="1">После ДТП
                                     </label>
                                 </div>
                             </fieldset>
@@ -199,7 +199,7 @@
                                 <label class="form-check-label" for="blocked">Исключить заблокированных</label>
                             </div>
                             <div class="button">
-                                <a class="Search" href="#">Найти</a>
+                                <button class="Search" type="submit">Найти</button>
                             </div>
                         </div>
                     </div>
@@ -285,7 +285,7 @@
                 <h3>Последние поступления</h3>
                 <div>(Постоянно обновляется)</div>
             </div>
-{#            {% for car in cars %}#}
+            {% for car in cars %}
             <div class="car_wrp">
                 <div class="star"></div>
                 <div class="car_photo">
@@ -297,14 +297,14 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                            <img class="d-block w-100" src="{% static 'img/car.png' %}" alt="First slide">
+                            <img class="d-block w-100" src="{{ car.image }}" alt="First slide">
                             </div>
-                            <div class="carousel-item">
-                            <img class="d-block w-100" src="{% static 'img/car.png' %}" alt="Second slide">
-                            </div>
-                            <div class="carousel-item">
-                            <img class="d-block w-100" src="{% static 'img/car.png' %}" alt="Third slide">
-                            </div>
+{#                            <div class="carousel-item">#}
+{#                            <img class="d-block w-100" src="{% static 'img/car.png' %}" alt="Second slide">#}
+{#                            </div>#}
+{#                            <div class="carousel-item">#}
+{#                            <img class="d-block w-100" src="{% static 'img/car.png' %}" alt="Third slide">#}
+{#                            </div>#}
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -322,14 +322,16 @@
                                     <ul class="accordion">
                                             <li>
                                             <div class="toggle_wrp">
-                                                <a class="toggle" href="#">Volkswagen Passat<i class="fas fa-caret-down"></i></a>
+                                                <a class="toggle" href="#">{{ car.mark }} {{ car.model }}<i class="fas fa-caret-down"></i></a>
                                                 <ul class="inner">
+                                                    {% if car.ria_link  %}
                                                     <li>
-                                                        <a class="acc_link" href="#">
+                                                        <a class="acc_link" href="{{ car.ria_link }}">
                                                             <div class="ria" href="#"></div>
                                                             <div>Перейти на AutoRia</div>
                                                         </a>
                                                     </li>
+                                                    {% endif %}
                                                     <li>
                                                         <a class="acc_link" href="#">
                                                             <div class="rst" href="#"></div>
@@ -344,48 +346,48 @@
                                         
                                     <p class="location">
                                         <i class="i-mark"></i>
-                                        Житомирская обл.
+                                        {{ car.location }}
                                     </p>
                                     <div class="car_properties">
                                             <div class="car_item">
                                                 <div> 
                                                     <i class="i-year"></i>
-                                                    <span>2002</span>
+                                                    <span>{{ car.year }}</span>
                                                     
                                                 </div>
                                             </div>
                                             <div class="car_item">
                                                 <div> 
                                                     <i class="i-fuel"></i>
-                                                    <span>Газ / Бензин</span>
+                                                    <span>{{ car.fuel_type }}</span>
                                                     
                                                 </div>
                                             </div>
                                              <div class="car_item">
                                                 <div> 
                                                     <i class="i-mileage"></i>
-                                                    <span>250 тис. км</span>
+                                                    <span>{{ car.mileage }} тис. км</span>
                                                     
                                                 </div>
                                             </div>
                                             <div class="car_item">
                                                 <div> 
                                                     <i class="i-gearbox"></i>
-                                                    <span>Механика</span>
+                                                    <span>{{ car.gearbox }}</span>
                                                     
                                                 </div>
                                             </div>
                                             <div class="car_item">
                                                 <div> 
                                                     <i class="i-volume"></i>
-                                                    <span>1.6 v</span>
+                                                    <span>{{ car.engine }} v</span>
                                                     
                                                 </div>
                                             </div>
                                             <div class="car_item">
                                                 <div> 
                                                     <i class="i-type"></i>
-                                                    <span>Седан</span>
+                                                    <span>{{ car.body }}</span>
                                                     
                                                 </div>
                                             </div>
@@ -394,7 +396,7 @@
                                 <div class="right_desc">
                                         <div class="cost">
                                                 <div class="cost_val">
-                                                    10 000 000 грн
+                                                    {{ car.price.0.price }} usd
                                                     <div></div>
                                                     <span class="cost_transform">
                                                         +20 000 грн
@@ -407,14 +409,10 @@
                                                         <li>
                                                             <a class="toggle" href="#"><span>История цен</span><i class="fas fa-caret-down"></i></a>
                                                             <ul class="inner">
-                                                                <li>10 000 000 грн <span>- 21.09.2019</span>
-                                                                </li>
-                                                                <li>10 000 000 грн <span>- 21.09.2019</span>
-                                                                </li>
-                                                                <li>10 000 000 грн <span>- 21.09.2019</span>
-                                                                </li>
-                                                                <li>10 000 000 грн <span>- 21.09.2019</span>
-                                                                </li>
+                                                                {% for price in car.price %}
+                                                                    <li>{{ price.price }} usd <span>- {{ price.date }}</span>
+                                                                    </li>
+                                                                {% endfor  %}
                                                             </ul>
                                                         </li>
                                                     </ul>
@@ -434,15 +432,15 @@
                         <a href="#">18 объявлений продавца</a>
                     </div>
                     <div class="date_info">
-                        <div>Добавлен: <span class="date">09.05.19 13:15</span></div>
-                        <div>Посл. обновление: <span class="date"> 09.05.19</span></div>
+                        <div>Добавлен: <span class="date">{{ car.createAt }}</span></div>
+                        <div>Посл. обновление: <span class="date">{{ car.updateAt }}</span></div>
                     </div>
                     
                         <div>
                             Ссылки на автомобиль:
                         </div>
                         <div class="img_links">
-                            <a class="ria" href="#"></a>
+                            <a class="ria" href="{{ car.ria_link }}"></a>
                             <a class="rst" href="#"></a>
                         </div>
                         <div class="link">
@@ -453,6 +451,7 @@
                     
                 </div>
             </div>
+            {% endfor %}
             <div class="btn_see_more">
                 <a href="" class="see_more">Показать все</a>
             </div>
