--- a/main/templates/components/car_list.html
+++ b/main/templates/components/car_list.html
@@ -147,7 +147,7 @@
             </div>
             <div class="link">
                 <a href="#"> <i class="fas fa-car-crash"></i> Диагностика</a>
-                <a href="#">  <i class="fas fa-car"></i></i>Найти похожие</a>
+                <a href="#">  <i class="fas fa-car"></i>Найти похожие</a>
             </div>
         </div>
     </div>
