--- a/main/templates/components/car_list.html
+++ b/main/templates/components/car_list.html
@@ -41,7 +41,7 @@
                     </ul>
                     <p class="location">
                         <i class="i-mark"></i>
-                        {{ car.location | title }} обл.
+                        {{ car.location | title }}
                     </p>
                     <div class="car_properties">
                         <div class="car_item">
