feat (parsers/ab/parser.py): updater; feat (parsers/tasks.py): celery task for ab update.

--- a/main/templates/seller.html
+++ b/main/templates/seller.html
@@ -11,7 +11,7 @@
     <section id="title">
         <div class="container">
             <h1>{{ seller.status }} c {{ seller.count }} объявлениями.</h1>
-            <p>Телефоны: {{ seller.phone }}</p>
+            {% comment %} <p>Телефоны: {{ seller.phone }}</p> {% endcomment %}
         </div>
     </section>
     <section id="filter">
