--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -34,6 +34,7 @@
     <footer>
         {% include 'components/footer.html' %}
     </footer>
-
+    {% block modal %}{% endblock modal %}
+{% block scripts %}{% endblock scripts %}
 </body>
 </html>
