--- a/cars/templates/main/components/header.html
+++ b/cars/templates/main/components/header.html
@@ -7,12 +7,11 @@
             </a>
         </div>
         <ul>
-
-                <a href="{% url 'all-car' %}"><li>Автомобили</li></a>
-
+            <a href="{% url 'all-car' %}"><li>Автомобили</li></a>
             <li>Проверить авто</li>
             <li>Подробнее про 2Cars</li>
             <li>Все для авто</li>
+            <a href="{% url 'analitic' %}"><li>Аналитика</li></a>
         </ul>
         <div class="user">
             <div>
