--- a/cars/templates/main/home.html
+++ b/cars/templates/main/home.html
@@ -32,10 +32,10 @@
                         <div class="fas fa-caret-down">
                             <select class="form-control" name="model" id="filter_model">
                                 <option selected disabled>Модель</option>
-                                {% models as models %}
+                                {% comment %} {% models as models %}
                                 {% for model in models %}
                                 <option value="{{ model.id }}">{{ model.name }}</option>
-                                {% endfor %}
+                                {% endfor %} {% endcomment %}
                             </select>
                         </div>
                         <div class="fas fa-caret-down">
@@ -194,7 +194,7 @@
             <h3>Последние поступления</h3>
             <div>(Постоянно обновляется)</div>
         </div>
-        {% include 'components/car_list.html' %}
+        {% include 'main/components/car_list.html' %}
         <div class="btn_see_more">
             <a href="{% url 'all-car' %}" class="see_more">Показать все</a>
         </div>
@@ -216,3 +216,19 @@
     </div>
 </section>
 {% endblock content %}
+{% block scripts %}
+    <script type="text/javascript">
+        $('#filter_brand').change(function () {
+            let mark_id = $(this).val()
+            console.log(mark_id)
+            let url_path = '/api/models/' + mark_id
+            $.get(url_path, function (data) {
+                console.log(data)
+                $('#filter_model').html('<option selected value="">Не выбрано</option>')
+                data.models.forEach(function (element) {
+                    $('#filter_model').append('<option value="' + element.id + '">' + element.name + '</option>')
+                })
+            })
+        })
+    </script>
+{% endblock scripts %}
