--- a/cars/templates/main/home.html
+++ b/cars/templates/main/home.html
@@ -203,7 +203,7 @@
 <section id="opportunities">
     <div class="container">
         <div class="wrap">
-            <div class="op_item">Проверить по номеру телефона</div>
+            <a href="#" class="op_item">Проверить по номеру телефона</a>
             <div class="op_item">Проверить по Гос. номеру или VIN</div>
             <div class="op_item">Проверка по базам Carfax, AutoCheck, Copart</div>
             <div class="op_item">АвтоПодбор и Диагностика авто перед покупкой</div>
@@ -211,7 +211,7 @@
             <div class="op_item">АвтоКонсьерж</div>
             <div class="op_item">Авто в Кредит / Лизинг</div>
             <div class="op_item">Автострахование</div>
-            <div class="op_item">Аналитика</div>
+            <a href="{% url 'analitic' %}" class="op_item">Аналитика</a>
         </div>
     </div>
 </section>
