--- a/cars/templates/admin/analitic.html
+++ b/cars/templates/admin/analitic.html
@@ -8,6 +8,8 @@
 {% endblock styles %}
 
 {% block content %}
-    <a class="btn btn-primary" href="{% url 'analitic-mileage' %}">Аналитика по пробегу</a>
-    <a class="btn btn-primary" href="{% url 'analitic-selltime' %}">Аналитика по ценам</a>
+    <div class="container">
+        <a class="btn btn-lg btn-block btn-success" href="{% url 'analitic-mileage' %}">Аналитика по пробегу</a>
+        <a class="btn btn-lg btn-block btn-success" href="{% url 'analitic-selltime' %}">Аналитика по ценам</a>
+    </div>
 {% endblock content %}
