--- a/cars/templates/admin/mileage.html
+++ b/cars/templates/admin/mileage.html
@@ -10,25 +10,20 @@
 {% block content %}
 <section id="filter">
     <div class="container">
-        <form action="{% url 'analitic-mileage' %}" method="POST">
-            {% csrf_token %}
+        <form method="POST">
             <div class="filter_wrp">
-                <div class="wrap">
+                <div class="wrap col-12">
                     <div class="left_block">
                         <div class="fas fa-caret-down">
                             <select class="form-control" name="model__mark" id="filter_brand" required>
-                                <option selected disabled value="">Марка</option>
+                                <option selected disabled value="">Выбери марку</option>
                                 {% marks as marks %}
                                 {% for mark in marks %}
                                 <option value="{{ mark.id }}">{{ mark.name }}</option>
                                 {% endfor %}
                             </select>
                         </div>
-                        <div class="fas fa-caret-down">
-                            <select class="form-control" name="model" id="filter_model" required>
-                                <option selected disabled value="">Модель</option>
-                            </select>
-                        </div>
+                        <div class="model-down"></div>
                         <div class="button">
                             <button class="Search" type="submit">Анализ</button>
                         </div>
@@ -38,20 +33,17 @@
         </form>
     </div>
 </section>
+<section id="filter" class="graph" style="display: none;">
+    <div class="container">
+        <div class="filter_wrp">
+            <div class="wrap col-12">
+                <canvas id="chLine"></canvas>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock content %}
+
 {% block scripts %}
-    <script type="text/javascript">
-        $('#filter_brand').change(function () {
-            let mark_id = $(this).val()
-            console.log(mark_id)
-            let url_path = '/api/models/' + mark_id
-            $.get(url_path, function (data) {
-                console.log(data)
-                $('#filter_model').html('<option selected value="">Не выбрано</option>')
-                data.models.forEach(function (element) {
-                    $('#filter_model').append('<option value="' + element.id + '">' + element.name + '</option>')
-                })
-            })
-        })
-    </script>
+    <script src="{% static 'js/analitic-mileage.js' %}" type="text/javascript"></script>
 {% endblock scripts %}
