feat: analitic_mileage

--- a/cars/templates/main/home.html
+++ b/cars/templates/main/home.html
@@ -211,7 +211,7 @@
             <div class="op_item">АвтоКонсьерж</div>
             <div class="op_item">Авто в Кредит / Лизинг</div>
             <div class="op_item">Автострахование</div>
-            <a href="{% url 'analitic' %}" class="op_item">Аналитика</a>
+            <a href="{% url 'analitic:index' %}" class="op_item">Аналитика</a>
         </div>
     </div>
 </section>
