--- a/cars/templates/analitic/index.html
+++ b/cars/templates/analitic/index.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <div class="container">
-        <a class="btn btn-lg btn-block btn-success" href="{% url 'analitic-mileage' %}">Аналитика по пробегу</a>
-        <a class="btn btn-lg btn-block btn-success" href="{% url 'analitic-selltime' %}">Аналитика по ценам</a>
+        <a class="btn btn-lg btn-block btn-success" href="{% url 'analitic:mileage' %}">Аналитика по пробегу</a>
+        <a class="btn btn-lg btn-block btn-success" href="{% url 'analitic:selltime' %}">Аналитика по ценам</a>
     </div>
 {% endblock content %}
