--- a/cars/templates/main/components/header.html
+++ b/cars/templates/main/components/header.html
@@ -22,8 +22,11 @@
             <div>
                 <i class="fa fa-bell" aria-hidden="true"></i>
             </div>
-            <a style="display: block;float: left;margin-left: 1rem;margin-top: 0.2rem;" class="photo" href="{% url 'profile' %}">
-            </a>
+            {% if request.user.is_authenticated %}
+                <a style="display: block;float: left;margin-left: 1rem;margin-top: 0.2rem;" class="photo" href="{% url 'auth:profile' %}"></a>
+            {% else %}
+                <button class="btn btn-sm btn-success" data-toggle="modal" data-target="#login">reg</button>
+            {% endif %}
         </div>
     </div>
 </div>
